fix: poor readability

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -52,7 +52,7 @@
       color: tools.$color-font;
       box-shadow: 0 5px 10px tools.$color-font;
       border-radius: 1rem;
-      text-shadow: 0 0 5px tools.$color-main;
+      background-color: rgba(255, 255, 255, 0.4);
     }
   }
 
